correcoes na api